style issue fixed in pay slip
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3545 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_view_payslip.erb
+++ b/app/views/employee/_view_payslip.erb
@@ -89,7 +89,7 @@
   </li>
   <li class="listodd">
     <div class="item-name"><b><%= t('remark') %></b></div>
-    <div class="item-edit"><b><span class="currency-type"><%= @monthly_payslips.first.remark %></span></b></div>
+    <div class="item-edit"><b><span class="currency-type1"><%= @monthly_payslips.first.remark %></span></b></div>
   </li>
 </ul>
 <% if permitted_to? :delete_payslip, :payroll %>
