default time zone brought into settings [fixed #3467]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3550 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendances/_register.html.erb
+++ b/app/views/attendances/_register.html.erb
@@ -45,7 +45,7 @@
   <table class="" align="center" width="100%">
     <tr class="tr-head">
       <td class="head-td-name"><%= t('name') %></td>
-      <% current_day = Date.today  %>
+      <% current_day = @local_tzone_time.to_date  %>
       <% if @config.config_value=='Daily' %>
         <% @dates.each do |date| %>
           <% if current_day.strftime("%a %d %y") == date.strftime("%a %d %y") %>
