--- a/app/views/employee/employee_individual_payslip_pdf.erb
+++ b/app/views/employee/employee_individual_payslip_pdf.erb
@@ -87,7 +87,7 @@
 
 
       <table id="pdf-table" width="100%" cellspacing="0">
-        <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('salary') %></td></tr>
+        <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('earnings') %></td></tr>
         <% c = 'even' %>
         <% @monthly_payslips.each do |mp| %>
           <% category = PayrollCategory.find(mp.payroll_category_id) %>
@@ -115,7 +115,7 @@
         <% else %>
           <tr class="even"><td class="col-pdf"><b><%= t('total_salary') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+ " " "#{@net_non_deductionable_amount.to_s}" %></b></td></tr>
         <% end  %>
-        <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('total_deduction') %></td></tr>
+        <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('deductions') %></td></tr>
         <% @monthly_payslips.each do |mp| %>
           <% category = PayrollCategory.find(mp.payroll_category_id) %>
           <% if category.is_deduction == true %>
@@ -139,14 +139,14 @@
           <% end %>
         <% end %>
         <% if c =='even' %>
-          <tr class="odd"><td class="col-pdf"><b><%= t('total_deduction') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+" ""#{@net_deductionable_amount.to_s}" %></b></td></tr>
+          <tr class="odd"><td class="col-pdf"><b><%= t('deductions') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+" ""#{@net_deductionable_amount.to_s}" %></b></td></tr>
           <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('total') %></td></tr>
           <tr class="even"><td class="col-pdf"><b><%= t('net_salary') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+ " " "#{@net_amount.to_s}" %></b></td></tr>
           <% unless @monthly_payslips.first.is_approved == false and @monthly_payslips.first.is_rejected == false%>
             <tr class="odd"><td class="col-pdf"><b><%= t('remark') %></b></td><td class="col-pdf"><b><%= @monthly_payslips.first.remark %></b></td></tr>
           <% end %>
         <% else %>
-          <tr class="even"><td class="col-pdf"><b><%= t('total_deduction') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+ " ""#{@net_deductionable_amount.to_s}" %></b></td></tr>
+          <tr class="even"><td class="col-pdf"><b><%= t('deductions') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+ " ""#{@net_deductionable_amount.to_s}" %></b></td></tr>
           <tr class="table-header"><td colspan="2"class="col-pdf"><%= t('total') %></td></tr>
           <tr class="odd"><td class="col-pdf"><b><%= t('net_salary') %></b></td><td class="col-pdf"><b><%= "#{@currency_type.to_s}"+ " " "#{@net_amount.to_s}" %></b></td></tr>
           <% unless @monthly_payslips.first.is_approved == false and @monthly_payslips.first.is_rejected == false%>
