time zone changes reflected in attendance register and report[fixed #3484]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3558 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendance_reports/filter.html.erb
+++ b/app/views/attendance_reports/filter.html.erb
@@ -28,7 +28,7 @@
 <div id="page-yield">
   <div class="label-field-pair">
     <label>
-      <%= "#{t('total_no_of_wrkng_days')} : " + @working_days.to_s %><br/>
+      <%= "#{t('total_no_of_wrkng_days')} : " + @academic_days.to_s %><br/>
       <%= t('filtered') %>: <%=  t(@range.downcase) %> <%= @value %> %
     </label>
   </div>
