--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -79,7 +79,7 @@
     </div>
     <%= image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" ) %>
   </div>
-
+<%= hidden_field_tag 'time_zone_date',@date_today, :id=>'time_zone' %>
 
 
   <div id="subjects"></div>
