--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -134,8 +134,10 @@
             <% elsif (@current_user.privileges.collect(&:name).include?('ViewResults') or (Batch.all.collect(&:employee_id).include?(@current_user.employee_record.id.to_s) if @current_user.employee?)) %>
               <li><%= link_to "Report Center" , :controller => "exam",:action=>'report_center' %></li>
             <% end %>
-            <%  if permitted_to? :index, :cce_reports  %>
-              <li><%= link_to "CCE Report" , :controller => "cce_reports" %>  </li>
+            <%  if Configuration.cce_enabled? %>
+              <%  if permitted_to? :index, :cce_reports  %>
+                <li><%= link_to "CCE Report" , :controller => "cce_reports" %>  </li>
+              <% end %>
             <% end %>
           </ul>
         </li>
