--- a/app/views/event/index.erb
+++ b/app/views/event/index.erb
@@ -31,11 +31,11 @@
     <%= error_messages_for 'events' %>
     <div class="label-field-pair">
       <label for="start-date"><%= t('start_date') %>:</label>
-      <div class="text-input-bg"><%= calendar_date_select_tag 'events[start_date]', I18n.localize(@date, :format=>("%Y-%m-%e %H:%M")), :time => true , :readonly=>true, :popup=>"force" %></div>
+      <div class="text-input-bg"><%= calendar_date_select_tag 'events[start_date]', I18n.localize(@start_date || @date, :format=>("%Y-%m-%e %H:%M")), :time => true , :readonly=>true, :popup=>"force" %></div>
     </div>
     <div class="label-field-pair">
       <label for="end-date"><%= t('end_date') %>:</label>
-      <div class="text-input-bg"><%= calendar_date_select_tag 'events[end_date]', I18n.localize(@date, :format=>("%Y-%m-%e %H:%M")), :time => true , :readonly=>true, :popup=>"force" %></div>
+      <div class="text-input-bg"><%= calendar_date_select_tag 'events[end_date]', I18n.localize(@end_date || @date, :format=>("%Y-%m-%e %H:%M")), :time => true , :readonly=>true, :popup=>"force" %></div>
     </div>
     <div class="label-field-pair">
       <label for="title"><%= t('title') %>:</label>
