fixed style issue in student login for online exam [fixed #3495]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3583 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -201,10 +201,18 @@
   function load_menu_from_plugins(){
 <% FedenaPlugin::AVAILABLE_MODULES.each do |mod|  %>
   <% unless mod[:more_menu].blank? %>
-    <% arrow = mod[:sub_menus].present? ? " <span class=right-arrow>#{arrow_dir}</span>" : "" %>
+    <% sub_menu_flag = 0 %>
+    <% unless mod[:sub_menus].blank? %>
+      <% mod[:sub_menus].each do|mnu| %>
+        <% if permitted_to? "#{mnu[:action]}".to_sym,"#{mnu[:controller]}".to_sym and mnu[:target_id]==mod[:name]%>
+          <% sub_menu_flag = 1 %>
+        <% end %>
+      <% end %>
+    <% end %>
+    <% arrow = sub_menu_flag==1 ? " <span class=right-arrow>#{arrow_dir}</span>" : "" %>
     <% if mod[:more_menu][:target_id].present? %>
       <% if permitted_to? mod[:more_menu][:action].to_sym,mod[:more_menu][:controller].to_sym %>
-        <% unless mod[:sub_menus].blank? %>
+        <% if sub_menu_flag==1 %>
               $('<%= mod[:more_menu][:target_id] %>').insert({bottom: '<li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %><ul class="level-2" id="<%= mod[:name] %>"></ul></li>'})
         <% else %>
               $('<%= mod[:more_menu][:target_id] %>').insert({bottom: '<li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %></li>'})
