fixed style issue in view payslip page [fixed #3498]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3584 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/view_employee_payslip.css
+++ b/public/stylesheets/finance/view_employee_payslip.css
@@ -51,7 +51,10 @@
     font-size: 13px;
     font-weight: bold;
 }
-.item-list li div.item-edit,
+.item-list li div.item-edit {
+    font-size : 0.9em;
+    text-align:right;
+}
 .item-list li div.item-delete {
     font-size : 0.9em;
     width : 100px;
