--- a/app/views/news/_comment.erb
+++ b/app/views/news/_comment.erb
@@ -16,44 +16,45 @@
 #KIND, either express or implied.  See the License for the
 #specific language governing permissions and limitations
 #under the License. -%>
+<% if @cmnt.valid? %>
+  <% if @config && @config.config_value == '1' %>
+    <% is_author = (@current_user == @cmnt.author) %>
+    <% if is_author || @is_moderator  || @cmnt.is_approved%>
+      <li id="comment-item-<%= @cmnt.id %>">
+        <div class="comment-details">
+          <div class="commenter"><%= @cmnt.author.present? ? @cmnt.author.first_name : "#{t('user_deleted')}" %></div>
+          <div class="comment-posted-at"><%= t('posted') %> <%= @cmnt.created_at.present? ? time_ago_in_words(@cmnt.created_at) : "" %> <%= t('ago') %></div>
 
-<% if @config && @config.config_value == '1' %>
-  <% is_author = (@current_user == @cmnt.author) %>
-  <% if is_author || @is_moderator  || @cmnt.is_approved%>
+          <div class ="approve">
+            <% if !@is_moderator and !@cmnt.is_approved and is_author%>
+              <%= "#{t('waiting_to_approve')}" %>
+            <% end %>
+            <% if @is_moderator and !@cmnt.is_approved%>
+              <%= "#{t('waiting_to_approve')}" %>
+              <%= link_to_remote "#{t('approve')}"  ,:url=>{:action=> "comment_approved",:id=>@cmnt.id} %> |
+            <% end %>
+
+            <%  if is_author || @is_moderator%>
+              <div class="delete-comment">
+                <%= link_to_remote  "#{t('delete_text')}", :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
+            <% end %>
+          </div>
+        </div>
+        <div class="comment-content"><%= sanitize   @cmnt.content.strip.gsub("\n", "<br/>"),:tags => %w[b i a ], :attributes => %w[href] %></div>
+      </li>
+    <% end %>
+  <% else %>
+
+
     <li id="comment-item-<%= @cmnt.id %>">
       <div class="comment-details">
         <div class="commenter"><%= @cmnt.author.present? ? @cmnt.author.first_name : "#{t('user_deleted')}" %></div>
-        <div class="comment-posted-at"><%= t('posted') %> <%= time_ago_in_words(@cmnt.created_at) %> <%= t('ago') %></div>
-
-        <div class ="approve">
-          <% if !@is_moderator and !@cmnt.is_approved and is_author%>
-            <%= "#{t('waiting_to_approve')}" %>
-          <% end %>
-          <% if @is_moderator and !@cmnt.is_approved%>
-            <%= "#{t('waiting_to_approve')}" %>
-            <%= link_to_remote "#{t('approve')}"  ,:url=>{:action=> "comment_approved",:id=>@cmnt.id} %> |
-          <% end %>
-
-          <%  if is_author || @is_moderator%>
-            <div class="delete-comment">
-              <%= link_to_remote  "#{t('delete_text')}", :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
-          <% end %>
-        </div>
+        <% if permitted_to? :delete_comment , :news %>
+          <div class="delete-comment"><%= link_to_remote  "#{t('delete_text')}", :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
+        <%end%>
+        <div class="comment-posted-at"><%= t('posted') %> <%= @cmnt.created_at.present? ? time_ago_in_words(@cmnt.created_at) : "" %> <%= t('ago') %></div>
       </div>
       <div class="comment-content"><%= sanitize   @cmnt.content.strip.gsub("\n", "<br/>"),:tags => %w[b i a ], :attributes => %w[href] %></div>
     </li>
   <% end %>
-<% else %>
-
-
-  <li id="comment-item-<%= @cmnt.id %>">
-    <div class="comment-details">
-      <div class="commenter"><%= @cmnt.author.present? ? @cmnt.author.first_name : "#{t('user_deleted')}" %></div>
-      <% if permitted_to? :delete_comment , :news %>
-        <div class="delete-comment"><%= link_to_remote  "#{t('delete_text')}", :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
-      <%end%>
-      <div class="comment-posted-at"><%= t('posted') %> <%= time_ago_in_words(@cmnt.created_at) %> <%= t('ago') %></div>
-    </div>
-    <div class="comment-content"><%= sanitize   @cmnt.content.strip.gsub("\n", "<br/>"),:tags => %w[b i a ], :attributes => %w[href] %></div>
-  </li>
 <% end %>
