fixed translation issues reminders/index [fixed #3508]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3610 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/reminder/index.erb
+++ b/app/views/reminder/index.erb
@@ -155,7 +155,7 @@
         });
       </script>
     <% end %>
-    <%= will_paginate @reminders %>
+    <%= will_paginate @reminders, :previous_label=>t('previous_text'), :next_label=>t('next_text') %>
   </div>
 
 </div>
