--- a/app/views/ranking_levels/_rank_edit_form.html.erb
+++ b/app/views/ranking_levels/_rank_edit_form.html.erb
@@ -1,3 +1,22 @@
+<%-# Fedena
+#Copyright 2010 Foradian Technologies Private Limited
+#
+#This product includes software developed at
+#Project Fedena - http://www.projectfedena.org/
+#
+#Licensed under the Apache License, Version 2.0 (the "License");
+#you may not use this file except in compliance with the License.
+#You may obtain a copy of the License at
+#
+#  http://www.apache.org/licenses/LICENSE-2.0
+#
+#Unless required by applicable law or agreed to in writing,
+#software distributed under the License is distributed on an
+#"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+#KIND, either express or implied.  See the License for the
+#specific language governing permissions and limitations
+#under the License. -%>
+
 <% remote_form_for :ranking_level,:url=>{:action=>"update_ranking_level", :id=>@ranking_level.id} do |c| %>
 
   <div id="form-content">
