teacher status css updated
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3617 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/timetable/work_allotment.css
+++ b/public/stylesheets/timetable/work_allotment.css
@@ -62,16 +62,16 @@
     width: 200px;
 }
 #teacher_status{
-    width: 250px;
-    position: fixed;
-    right: 0px;
-    top: 150px;
-    font-size: 12px;
     border: 1px solid #00CC00;
-    padding: 0px;
+    bottom: 0;
+    font-size: 12px;
     font-weight: bold;
-    overflow: scroll;
-    height: 510px;
+    overflow: auto;
+    padding: 0;
+    position: fixed;
+    right: 0;
+    top: 10px;
+    width: 250px;
 }
 .category-list li span{
     float: right;
