--- a/app/views/exam/consolidated_exam_report_pdf.erb
+++ b/app/views/exam/consolidated_exam_report_pdf.erb
@@ -18,126 +18,153 @@
 #under the License. -%>
 
 
-<div id="page-yield">
-  <div class="hor_line"></div>
-  <h2><%= @exam_group.batch.course.full_name %> <%= @exam_group.batch.name %> - <%= @exam_group.name %></h2>
-  <% grade_type = "normal" %>
-  <% grade_type = "GPA" if @batch.gpa_enabled? %>
-  <% grade_type = "CWA" if @batch.cwa_enabled? %>
-  <div class="hor_line"></div>
+<div id="page-yield" class="available_sections1">
+  <div class="page1"></div>
+  <div class="section1 row" >
+    <center>
+      <div class="hor_line"></div>
+      <h2><%= @exam_group.batch.course.full_name %> <%= @exam_group.batch.name %> - <%= @exam_group.name %></h2>
+      <% grade_type = "normal" %>
+      <% grade_type = "GPA" if @batch.gpa_enabled? %>
+      <% grade_type = "CWA" if @batch.cwa_enabled? %>
+      <div class="hor_line"></div>
 
-  <div class="extender"> </div>
-  <div class="report">
-    <div id ="main_info">
-      <h4><%= t('consolidated_report') %></h4>
-    </div>
-    <div id="pdf-info">
-      <% c = 'even' %>
-      <table id="pdf-table" width="100%" cellspacing="0">
-        <tr class="table-header">
-          <td><%= t('name') %></td>
-          <% if grade_type=="GPA" or grade_type=="CWA" %>
-            <% @exam_group.exams.each do |exam| %>
-              <td><%= exam.subject.code %><%= "(" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
-            <% end %>
-            <% if grade_type=="CWA" %>
-              <td><%= t('weighted_average') %></td>
-            <% else %>
-              <td><%= t('gpa') %></td>
-            <% end %>
-          <% else %>
-            <% @exam_group.exams.each do |exam| %>
-              <td><%= exam.subject.code %><%= "(" + exam.maximum_marks.to_s + ")"  unless exam.maximum_marks.nil? %></td>
-            <% end %>
-            <% unless @exam_group.exam_type == "Grades" %>
-              <td><%= t('percentage') %>(%)</td>
-            <% end %>
-          <% end %>
-        </tr>
-        <% @exam_group.batch.students.each_with_index do |student,i|%>
-          <% if i== 50 %>
-            <% i= 0 %>
-            <tr class="page-break"><td colspan="3"></td></tr>
-            <tr class="table-header">
-              <td class="col-pdf"><%= t('name') %></td>
-              <% if grade_type=="GPA" or grade_type=="CWA" %>
-                <% @exam_group.exams.each do |exam| %>
-                  <td><%= exam.subject.code %><%= "(" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
-                <% end %>
-                <% if grade_type=="CWA" %>
-                  <td><%= t('weighted_average') %></td>
-                <% else %>
-                  <td><%= t('gpa') %></td>
-                <% end %>
-              <% else %>
-                <% @exam_group.exams.each do |exam| %>
-                  <td><%= exam.subject.code %><%= "(" + exam.maximum_marks.to_s + ")"  unless exam.maximum_marks.nil? %></td>
-                <% end %>
-                <% unless @exam_group.exam_type == "Grades" %>
-                  <td><%= t('percentage') %>(%)</td>
-                <% end %>
-              <% end %>
-            </tr>
-          <% end %>
-          <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-            <td class="col-pdf"><%= student.full_name %></td>
-            <% if grade_type=="GPA" %>
-              <% total_credits = 0 %>
-              <% total_credit_points=0 %>
-              <% @exam_group.exams.each do |exam| %>
-                <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
-                <% unless exam_score.nil? %>
-                  <td class="col-pdf"><%= exam_score.grading_level.present? ? exam_score.grading_level : "-" %></td>
-                  <% total_credit_points = total_credit_points + (exam_score.grading_level.credit_points.to_f * exam.subject.credit_hours.to_f) unless exam_score.grading_level.nil? %>
-                  <% total_credits = total_credits + exam.subject.credit_hours.to_f unless exam.subject.credit_hours.nil? %>
-                <% else %>
-                  <td class="col-pdf">-</td>
-                <% end %>
-              <% end %>
-              <td class="col-pdf"><%= "%.2f" %(total_credit_points.to_f/total_credits.to_f) %></td>
-            <% elsif grade_type=="CWA" %>
-              <% total_credits = 0 %>
-              <% total_weighted_marks=0 %>
-              <% @exam_group.exams.each do |exam| %>
-                <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
-                <% unless exam_score.nil? %>
-                  <td class="col-pdf"><%= exam_score.marks.present? ? "%.2f" %((exam_score.marks.to_f/exam.maximum_marks.to_f)*100) : "-" %></td>
-                  <% total_weighted_marks = total_weighted_marks + ((exam_score.marks.to_f/exam.maximum_marks.to_f)*100)*(exam.subject.credit_hours.to_f) unless exam_score.marks.nil? %>
-                  <% total_credits = total_credits + exam.subject.credit_hours.to_f unless exam.subject.credit_hours.nil? %>
-                <% else %>
-                  <td class="col-pdf">-</td>
-                <% end %>
-              <% end %>
-              <td class="col-pdf"><%= "%.2f" %(total_weighted_marks.to_f/total_credits.to_f) %></td>
-            <% else %>
-              <% total_marks = 0 %>
-              <% total_max_marks = 0 %>
-              <% @exam_group.exams.each do |exam| %>
-                <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
-                <% unless @exam_group.exam_type == "Grades" %>
-                  <td class="col-3">
-                    <% if @exam_group.exam_type == "MarksAndGrades" %>
-                      <%= exam_score.nil? ? '-' :  "#{(exam_score.marks || "-")}" + "(#{(exam_score.grading_level || "-")})" %>
-                    <% else %>
-                      <%= exam_score.nil? ? '-' : exam_score.marks || "-" %>
-                    <% end %>
-                  </td>
-                  <% total_marks = total_marks+(exam_score.marks || 0) unless exam_score.nil?  %>
-                  <% total_max_marks = total_max_marks+exam.maximum_marks unless exam_score.nil? %>
-                <% else %>
-                  <td class="col-3"><%= exam_score.nil? ? '-' : exam_score.grading_level || "-" %></td>
-                <% end %>
-              <% end %>
-              <% unless @exam_group.exam_type == "Grades" %>
-                <td class="col-4"><% percentage = total_marks*100/total_max_marks.to_f unless total_max_marks == 0%>
-                  <%= "%.2f" %percentage unless total_max_marks == 0 %></td>
-                <% end %>
-            </tr>
-          <% end %>
-        <% end %>
-      </table>
-    </div>
+      <div class="extender"> </div>
+      <div id ="main_info">
+        <h4><%= t('consolidated_report') %></h4>
+      </div>
+    </center>
   </div>
 
+    <% c = 'even' %>
+  <div class="section1 row" id="table-headers" >
+    <center>
+      <table id="pdf-table" width="100%">
+      <tr class="table-header">
+        <td class="name-td"><%= t('name') %></td>
+        <% if grade_type=="GPA" or grade_type=="CWA" %>
+          <% @exam_group.exams.each do |exam| %>
+            <td class="mark-td"><%= exam.subject.code %><%= " (" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
+          <% end %>
+          <% if grade_type=="CWA" %>
+            <td class="avg-td"><%= t('weighted_average') %></td>
+          <% else %>
+            <td class="avg-td"><%= t('gpa') %></td>
+          <% end %>
+        <% else %>
+          <% (@exam_group.exams + @exam_group.exams).each do |exam| %>
+            <td class="mark-td"><%= exam.subject.code %><%= " (" + exam.maximum_marks.to_s + ")"  unless exam.maximum_marks.nil? %></td>
+          <% end %>
+          <% unless @exam_group.exam_type == "Grades" %>
+            <td class="avg-td"><%= t('percentage') %> (%)</td>
+          <% end %>
+        <% end %>
+      </tr>
+      </table>
+    </center>
+  </div>
+      <% (@exam_group.batch.students + @exam_group.batch.students + @exam_group.batch.students).each_with_index do |student,i|%>
+        <div class="section1 row" >
+    <center>
+      <table id="pdf-table" width="100%">
+        <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %> section">
+          <td class="col-pdf name-td"><%= student.full_name %></td>
+          <% if grade_type=="GPA" %>
+            <% total_credits = 0 %>
+            <% total_credit_points=0 %>
+            <% @exam_group.exams.each do |exam| %>
+              <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
+              <% unless exam_score.nil? %>
+                <td class="col-pdf mark-td"><%= exam_score.grading_level.present? ? exam_score.grading_level : "-" %></td>
+                <% total_credit_points = total_credit_points + (exam_score.grading_level.credit_points.to_f * exam.subject.credit_hours.to_f) unless exam_score.grading_level.nil? %>
+                <% total_credits = total_credits + exam.subject.credit_hours.to_f unless exam.subject.credit_hours.nil? %>
+              <% else %>
+                <td class="col-pdf mark-td">-</td>
+              <% end %>
+            <% end %>
+            <td class="col-pdf avg-td"><%= "%.2f" %(total_credit_points.to_f/total_credits.to_f) %></td>
+          <% elsif grade_type=="CWA" %>
+            <% total_credits = 0 %>
+            <% total_weighted_marks=0 %>
+            <% @exam_group.exams.each do |exam| %>
+              <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
+              <% unless exam_score.nil? %>
+                <td class="col-pdf mark-td"><%= exam_score.marks.present? ? "%.2f" %((exam_score.marks.to_f/exam.maximum_marks.to_f)*100) : "-" %></td>
+                <% total_weighted_marks = total_weighted_marks + ((exam_score.marks.to_f/exam.maximum_marks.to_f)*100)*(exam.subject.credit_hours.to_f) unless exam_score.marks.nil? %>
+                <% total_credits = total_credits + exam.subject.credit_hours.to_f unless exam.subject.credit_hours.nil? %>
+              <% else %>
+                <td class="col-pdf mark-td">-</td>
+              <% end %>
+            <% end %>
+            <td class="col-pdf avg-td"><%= "%.2f" %(total_weighted_marks.to_f/total_credits.to_f) %></td>
+          <% else %>
+            <% total_marks = 0 %>
+            <% total_max_marks = 0 %>
+            <% (@exam_group.exams + @exam_group.exams).each do |exam| %>
+              <% exam_score = ExamScore.find_by_student_id_and_exam_id(student.id,exam.id) %>
+              <% unless @exam_group.exam_type == "Grades" %>
+                <td class="col-pdf mark-td">
+                  <% if @exam_group.exam_type == "MarksAndGrades" %>
+                    <%= exam_score.nil? ? '-' :  "#{(exam_score.marks || "-")}" + "(#{(exam_score.grading_level || "-")})" %>
+                  <% else %>
+                    <%= exam_score.nil? ? '-' : exam_score.marks || "-" %>
+                  <% end %>
+                </td>
+                <% total_marks = total_marks+(exam_score.marks || 0) unless exam_score.nil?  %>
+                <% total_max_marks = total_max_marks+exam.maximum_marks unless exam_score.nil? %>
+              <% else %>
+                <td class="col-pdf mark-td"><%= exam_score.nil? ? '-' : exam_score.grading_level || "-" %></td>
+              <% end %>
+            <% end %>
+            <% unless @exam_group.exam_type == "Grades" %>
+              <td class="col-pdf avg-td"><% percentage = total_marks*100/total_max_marks.to_f unless total_max_marks == 0%>
+                <%= "%.2f" %percentage unless total_max_marks == 0 %></td>
+              <% end %>
+          </tr>
+      </table>
+    </center>
+        </div>
+        <% end %>
+      <% end %>
 
 </div>
+<% if params[:page_height] %>
+  <script type="text/javascript">
+    var body = document.body,
+    html = document.documentElement;
+    var pg_height = parseInt(<%= params[:page_height] %>);
+    var header = $("table-headers")
+    var page = new Element('div',{'class' : 'page1'});
+    var pageBreak = new Element('div',{'class' : 'page-break1'});
+    var insertPageBreak = function(){body.appendChild(pageBreak.cloneNode(true))};
+    var insertPage = function(){body.appendChild(page.cloneNode(true));};
+    var currPage = function(){return $$('.page1').last()};
+    var insertHeader = function(){
+      header1 = header.cloneNode(true);
+      header1.style.marginTop="50px";
+      currPage().appendChild(header1.cloneNode(true));};
+    var current_page_height=0;
+    var i=0
+    $$('.available_sections1 .section1').each(function(el){
+      a = parseInt(el.getHeight());
+      c=current_page_height+a;
+      current_page_height=c;
+      if(c>pg_height){
+        current_page_height=a
+        body.appendChild(new Element('div',{'id' : 'page-blank_'+i, 'class' : 'page-blank'}))
+        document.getElementById('page-blank_'+i).style.height= (c-pg_height)+'px';
+        document.getElementById('page-blank_'+i).innerHTML="&nbsp;"/* if a div doesnt have any content it may not display.. set height will not work */
+        i+=1
+
+        //el.style.marginTop="50px"; /* for this border-top is coming, top section of each page */
+        insertPageBreak();
+       /* insertHeader(); */
+        insertPage();
+        insertHeader();
+        current_page_height = (current_page_height + header.getHeight() + 50)
+        
+      }
+      currPage().appendChild(el);
+    });
+  </script>
+<% end %>
