--- a/public/stylesheets/exam/consolidated_exam_report_pdf.css
+++ b/public/stylesheets/exam/consolidated_exam_report_pdf.css
@@ -1,5 +1,3 @@
-
-
 #page-yield {
     width:1400px;
     margin: 0 auto;
@@ -158,4 +156,56 @@ table#pdf-table{
     color: #999999;
     font-size: 18px;
 
+}
+.page1 {
+    width:1400px;
+    height: auto;
+    page-break-after: always;
+    page-break-inside: avoid;
+    clear: both;
+}
+.page-break1{
+    height: 20px;
+    border: 1px solid #fff;
+    width:1400px;
+    float: left;
+}
+.grand_total
+{
+    border-bottom: 1px solid #ADACAB;
+}
+.section1{
+    page-break-before:always;
+    text-align: center;
+}
+.row{
+    float: left;
+    width: 100%;
+    text-align: center;
+}
+.page-blank{
+    width: 100%;
+    float: left;
+}
+.page_break{
+    margin-top: 60px;
+}
+.mark-td{
+    width:60px;
+    min-width:60px;
+    max-width:60px;
+    overflow:hidden;
+
+}
+.name-td{
+    width:auto;
+/*    min-width:180px;
+    max-width:180px;*/
+    overflow: hidden;
+}
+.avg-td{
+    width:80px;
+    min-width:80px;
+    max-width:80px;
+    overflow:hidden;
 }
