--- a/public/stylesheets/timetable/teachers_timetable.css
+++ b/public/stylesheets/timetable/teachers_timetable.css
@@ -54,6 +54,7 @@ padding-left: 0px;
     font-weight: bold;
     font-size: 12px;
     background-color: #fff;
+    min-width: 70px;
 }
 #table-viewer{
 /*    height:480px;*/
