--- a/app/views/finance/_fee_collection_batchs.html.erb
+++ b/app/views/finance/_fee_collection_batchs.html.erb
@@ -22,10 +22,10 @@
       </label>
     </div>
     <div class="fee_category_scroll">
-      <b class="sel-list">
+      <div class="sel-list">
         <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
         <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
-      </b>
+      </div>
       <% @fee_category.each do |f| %>
         <div class="each_batch">
           <% checked = true %>
