fee discount new css modified
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3664 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/fee_discount_new.css
+++ b/public/stylesheets/finance/fee_discount_new.css
@@ -89,6 +89,8 @@
     margin-bottom: 2px;
     width: 197px;
     border-bottom: 1px solid #DDDDDD;
+    font-size: 14px;
+    margin-left: 6px;
 }
 
 
