"Employee Subject Association" link added in timetable entries page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3666 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/timetable_entries/new.html.erb
+++ b/app/views/timetable_entries/new.html.erb
@@ -78,7 +78,13 @@
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
-
+<div id="inner-tab-menu">
+  <ul>
+    <% if (permitted_to? :subject_assignment,:employee) %>
+      <li><%= link_to "#{t('employee_subject_association')}",:controller=>"employee", :action=>"subject_assignment" %></li>
+    <% end %>
+  </ul>
+</div>
 <div id="page-yield">
   <div class="box">
     <% unless flash[:notice].nil? %>
