Bread crumbs added in finance/fee_discounts
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3673 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/fee_discounts.html.erb
+++ b/app/views/finance/fee_discounts.html.erb
@@ -41,7 +41,13 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('fees_text')}", :controller => "finance", :action => "fees_index" %> &raquo;
+    <%= link_to "#{t('create_fees')}", :controller => "finance", :action => "fees_create" %> &raquo;
+    <%= link_to "#{t('master_fees')}", :controller => "finance", :action => "master_fees" %> &raquo;
+    <%= t('fee_discounts') %>
+  </div>
 
     <div id="batch">
       <div class="label-field-pair"><label><%= t('select_a_batch') %> : </label>
