Add Bread crumbs added in finance/monthly_report page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3675 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/monthly_report.html.erb
+++ b/app/views/finance/monthly_report.html.erb
@@ -27,6 +27,11 @@
 </div>
 
 <div id="page-yield">
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> &raquo;
+    <%= t('monthly_transactions') %>
+  </div>
   <div class="box">
   <% form_for :report, :url => {:action => 'update_monthly_report'} do |form| %>
     <div class="label-field-pair">
