Bread crumbs added in update_monthly_report page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3678 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/update_monthly_report.html.erb
+++ b/app/views/finance/update_monthly_report.html.erb
@@ -32,7 +32,12 @@
   </ul>
 </div>
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> &raquo;
+    <%= link_to "#{t('monthly_transactions')}", :controller => "finance", :action => "monthly_report" %> &raquo;
+    <%= t('finance_transactions_view') %>
+  </div>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
 
     <tr class="tr-head">
