--- a/app/views/finance/donations_report.html.erb
+++ b/app/views/finance/donations_report.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/show_finance.png") %>
+  <%= image_tag("/images/show_finance.png") %>
   <h1><%= t('finance_monthly_report') %></h1>
   <h3><%= t('donations') %></h3>
   <div id="app-back-button">
@@ -27,7 +27,13 @@
 </div>
 
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> &raquo;
+    <%= link_to "#{t('monthly_transactions')}", :controller => "finance", :action => "monthly_report" %> &raquo;
+    <%= link_to "#{t('finance_transactions_view')}", :controller => "finance", :action => "update_monthly_report", :start_date=>@start_date, :end_date=>@end_date %> &raquo;
+    <%= t('donations') %>
+  </div>
   <% donations_income = 0 %>
   <% donations_expenses = 0 %>
 
