--- a/app/views/finance/fees_report.html.erb
+++ b/app/views/finance/fees_report.html.erb
@@ -27,6 +27,13 @@
 </div>
 
 <div id="page-yield">
+  <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> &raquo;
+    <%= link_to "#{t('monthly_transactions')}", :controller => "finance", :action => "monthly_report" %> &raquo;
+    <%= link_to "#{t('finance_transactions_view')}", :controller => "finance", :action => "update_monthly_report", :start_date=>@start_date, :end_date=>@end_date %> &raquo;
+    <%= t('fees_report') %>
+  </div>
   <% total =0 %>
 
   <b id="fees_report_title"><%= t('fees_transaction_report') %></b>
