--- a/app/views/finance/salary_employee.html.erb
+++ b/app/views/finance/salary_employee.html.erb
@@ -28,6 +28,14 @@
 </div>
 
 <div id="page-yield">
+    <div class="bread_crumb">
+    <%= link_to t('finance_text'), :controller => "finance", :action=>"index" %> &raquo;
+    <%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> &raquo;
+    <%= link_to "#{t('monthly_transactions')}", :controller => "finance", :action => "monthly_report" %> &raquo;
+    <%= link_to "#{t('finance_transactions_view')}", :controller => "finance", :action => "update_monthly_report", :start_date=>@start_date, :end_date=>@end_date %> &raquo;
+    <%= link_to "#{t('salary_account')}", :controller => "finance", :action => "salary_department", :start=>@start_date, :end=>@end_date %> &raquo;
+    <%= t('department')+": "+ @department.name %>
+  </div>
   <% total=0 %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
