Bread crumbs added in manage_course page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3690 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/courses/manage_course.html.erb
+++ b/app/views/courses/manage_course.html.erb
@@ -35,7 +35,11 @@
 
 
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('configuration_text'), :controller => "configuration", :action=>"index" %> &raquo;
+    <%= link_to "#{t('courses_text')}", :controller => "courses", :action => "index" %> &raquo;
+    <%= t('manage_course') %>
+  </div>
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
