Bread crumbs added in settings pages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3693 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batch_transfers/index.html.erb
+++ b/app/views/batch_transfers/index.html.erb
@@ -31,7 +31,12 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
+  <div class="bread_crumb">
+    <%= link_to t('configuration_text'), :controller => "configuration", :action=>"index" %> &raquo;
+    <%= link_to "#{t('courses_text')}", :controller => "courses", :action => "index" %> &raquo;
+    <%= link_to "#{t('manage_batch')}", :controller => "courses", :action => "manage_batches" %> &raquo;
+    <%= t('batch_transfer') %>
+  </div>
   <div class="label-field-pair">
     <label><%= t('select_a_course') %>:
       <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
