--- a/app/views/courses/grouped_batches.html.erb
+++ b/app/views/courses/grouped_batches.html.erb
@@ -20,13 +20,19 @@
 <div id="content-header">
   <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('courses_text') %></h1>
-  <h3>Grouped Batches</h3>
+  <h3><%= t('grouped_batches') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('configuration_text'), :controller => "configuration", :action=>"index" %> &raquo;
+    <%= link_to "#{t('courses_text')}", :controller => "courses", :action => "index" %> &raquo;
+    <%= link_to "#{t('manage_course')}", :controller => "courses", :action => "manage_course" %> &raquo;
+    <%= link_to "#{@course.full_name}", :controller => "courses", :action => "show", :id=>@course.id %> &raquo;
+    <%= t('grouped_batches') %>
+  </div>
   <div id="flash"></div>
 
   <div id="errors">
