--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -27,7 +27,12 @@
 </div>
 
 <div id="page-yield">
-
+  <div class="bread_crumb">
+    <%= link_to t('configuration_text'), :controller => "configuration", :action=>"index" %> &raquo;
+    <%= link_to "#{t('courses_text')}", :controller => "courses", :action => "index" %> &raquo;
+    <%= link_to "#{t('manage_course')}", :controller => "courses", :action => "manage_course" %> &raquo;
+    <%= t('new_text') %>
+  </div>
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
